tests/ui/type-alias-impl-trait/define_opaques_attr/missing_parens.stderr
error: expected list of type aliases
  --> $DIR/missing_parens.rs:3:1
   |
LL | #[define_opaques]
   | ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

