tests/ui/type-alias-impl-trait/define_opaques_attr/missing_parens.rs
#![feature(type_alias_impl_trait)]

#[define_opaques]
//~^ ERROR: expected list of type aliases
fn main() {}
